# stephen_sw_technical_assessment

./: .pre-commit-config.yaml  README.md
a_programming_paradigms/: CMakeLists.txt
a_programming_paradigms/include/audio_player/: audio_player.h  audio_player_interface.h
a_programming_paradigms/src/: audio_player.cpp  main.cpp
b_code_refactor/include/robot_control/: robot.h  robot_control_interface.h
b_code_refactor/src/: robot.cpp
